@@ -1,8 +1,8 @@
 /*-------------------------------------------------------------------------
    _mullong.c - routine for multiplication of 32 bit (unsigned) long
 
-   Copyright (C) 1999, Jean-Louis Vern jlvern@writeme.com
-   Copyright (C) 1999, Sandeep Dutta . sandeep.dutta@usa.net
+   Copyright (C) 1999, Jean-Louis Vern <jlvern AT gmail.com>
+   Copyright (C) 1999, Sandeep Dutta <sandeep.dutta AT ieee.org>
 
    This library is free software; you can redistribute it and/or modify it
    under the terms of the GNU General Public License as published by the
@@ -97,4 +97,3 @@ _mullong (long a, long b)
 
         return t.l + b;
 }
-
